--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,15 @@
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+  }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 23
@@ -20,8 +31,21 @@ android {
 }
 
 dependencies {
+  final DAGGER_VERSION = '2.2'
+
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.3.0'
   compile 'com.android.support:design:23.3.0'
+  compile 'com.nineoldandroids:library:2.4.0'
+  compile 'com.google.code.gson:gson:2.3.1'
+  compile 'com.jakewharton:butterknife:8.0.1'
+  apt 'com.jakewharton:butterknife-compiler:8.0.1'
+  compile 'com.squareup:otto:1.3.5'
+
+  /** DAGGER 2 **/
+  provided 'org.glassfish:javax.annotation:10.0-b28'
+  compile "com.google.dagger:dagger:$DAGGER_VERSION"
+  provided "com.google.auto.factory:auto-factory:1.0-beta3"
+  apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 }
