--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,16 @@ dependencies {
   compile 'com.jakewharton:butterknife:8.0.1'
   apt 'com.jakewharton:butterknife-compiler:8.0.1'
   compile 'com.squareup:otto:1.3.5'
-  compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
 
   /** DAGGER 2 **/
   provided 'org.glassfish:javax.annotation:10.0-b28'
   compile "com.google.dagger:dagger:$DAGGER_VERSION"
   provided "com.google.auto.factory:auto-factory:1.0-beta3"
   apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+
+  /** STETHO **/
+  debugCompile 'com.facebook.stetho:stetho:1.3.1'
+  provided 'com.facebook.stetho:stetho:1.3.1'
+  debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+  provided 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 }
