--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
   apt 'com.jakewharton:butterknife-compiler:8.0.1'
   compile 'com.squareup:otto:1.3.5'
   compile 'com.sothree.slidinguppanel:library:3.3.0'
+  compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
 
   /** DAGGER 2 **/
   provided 'org.glassfish:javax.annotation:10.0-b28'
