--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.3.0'
   compile 'com.android.support:design:23.3.0'
   compile 'com.nineoldandroids:library:2.4.0'
+  compile 'com.android.support:cardview-v7:21.0.0'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.jakewharton:butterknife:8.0.1'
   apt 'com.jakewharton:butterknife-compiler:8.0.1'
