--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
   compile 'com.squareup:otto:1.3.5'
   compile 'com.sothree.slidinguppanel:library:3.3.0'
   compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+  compile 'com.anjlab.android.iab.v3:library:1.0.31'
 
   /** DAGGER 2 **/
   provided 'org.glassfish:javax.annotation:10.0-b28'
