--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,59 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stride.android" >
+    package="com.stride.android"
+    >
 
-    <uses-feature
-        android:name="android.hardware.sensor.stepcounter"
-        android:required="true"
+  <uses-feature
+      android:name="android.hardware.sensor.stepcounter"
+      android:required="true"
+      />
+
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="com.android.vending.BILLING"/>
+
+  <application
+      android:name=".StrideApplication"
+      android:allowBackup="true"
+      android:icon="@mipmap/ic_launcher"
+      android:label="@string/app_name"
+      android:supportsRtl="true"
+      android:theme="@style/AppTheme"
+      >
+    <activity
+        android:name=".ui.activity.MainActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.NoActionBar"
+        >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+
+    <activity
+        android:name=".ui.activity.PaymentActivity"
+        android:theme="@style/AppTheme.TransparentActivity"
+        android:configChanges="keyboardHidden|orientation"
         />
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <service
+        android:name=".service.SensorListener"/>
 
-    <application
-        android:name=".StrideApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+    <receiver android:name=".service.receiver.RebootReceiver">
+      <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED"/>
+      </intent-filter>
+    </receiver>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+    <receiver
+        android:name=".service.receiver.ShutdownReceiver">
+      <intent-filter>
+        <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
+        <action android:name="de.j4velin.ACTION_SHUTDOWN"/>
+      </intent-filter>
+    </receiver>
 
-        <service
-            android:name=".service.SensorListener"/>
+    <receiver
+        android:name=".service.receiver.ChargingReceiver"
+        android:enabled="false"
+        >
+      <intent-filter>
+        <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+        <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+      </intent-filter>
+    </receiver>
 
-        <receiver android:name=".service.receiver.RebootReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-            </intent-filter>
-        </receiver>
-
-        <receiver
-            android:name=".service.receiver.ShutdownReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.ACTION_SHUTDOWN"/>
-                <action android:name="de.j4velin.ACTION_SHUTDOWN"/>
-            </intent-filter>
-        </receiver>
-
-        <receiver
-            android:name=".service.receiver.ChargingReceiver"
-            android:enabled="false">
-            <intent-filter>
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
-            </intent-filter>
-        </receiver>
-
-    </application>
+  </application>
 
 </manifest>
