--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.3.0'
   compile 'com.android.support:design:23.3.0'
   compile 'com.nineoldandroids:library:2.4.0'
-  compile 'com.android.support:cardview-v7:21.0.0'
+  compile 'com.android.support:cardview-v7:23.3.0'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.jakewharton:butterknife:8.0.1'
   apt 'com.jakewharton:butterknife-compiler:8.0.1'
@@ -46,6 +46,7 @@ dependencies {
   compile 'com.sothree.slidinguppanel:library:3.3.0'
   compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
   compile 'com.anjlab.android.iab.v3:library:1.0.31'
+  compile 'com.google.android.gms:play-services-ads:8.4.0'
 
   /** DAGGER 2 **/
   provided 'org.glassfish:javax.annotation:10.0-b28'
