--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,16 @@
       </intent-filter>
     </receiver>
 
+    <receiver android:name=".service.receiver.WidgetBroadcastReceiver">
+      <intent-filter>
+        <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+      </intent-filter>
+      <meta-data
+          android:name="android.appwidget.provider"
+          android:resource="@xml/widget_provider"
+          />
+    </receiver>
+
   </application>
 
 </manifest>
