--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,22 @@
 buildscript {
   repositories {
     mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
   }
 
   dependencies {
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'io.fabric.tools:gradle:1.+'
   }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
@@ -59,4 +67,7 @@ dependencies {
   provided 'com.facebook.stetho:stetho:1.3.1'
   debugCompile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
   provided 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
 }
