--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,16 @@
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
       >
+
     <activity
         android:name=".ui.activity.MainActivity"
-        android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar"
+        />
+
+    <activity
+        android:name=".ui.activity.SplashActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.TranslucentStatusBar"
         >
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -77,9 +83,10 @@
           />
     </receiver>
 
-      <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="2c6d8f1247312851d5ebd3b17696dcdd5bb016cf" />
-    </application>
+    <meta-data
+        android:name="io.fabric.ApiKey"
+        android:value="2c6d8f1247312851d5ebd3b17696dcdd5bb016cf"
+        />
+  </application>
 
 </manifest>
